Bug 334650 - SSL KCM crashes in Project Neon 5
Summary: SSL KCM crashes in Project Neon 5
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_ssl (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-12 11:23 UTC by Rohan Garg
Modified: 2014-05-12 15:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2014-05-12 11:23:59 UTC
The SSL KCM crashes when trying to access it.

Application: System Settings (systemsettings), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7eff0b2a07c0 (LWP 13925))]

Thread 2 (Thread 0x7efef9e63700 (LWP 13926)):
#0  0x00007eff06e19fbd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007eff056c1b72 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007eff056c364f in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007efefc432b2b in QXcbEventReader::run (this=0x2165a10) at qxcbconnection.cpp:1034
#4  0x00007eff074a1e11 in QThreadPrivate::start (arg=0x2165a10) at thread/qthread_unix.cpp:345
#5  0x00007eff03e9c182 in start_thread (arg=0x7efef9e63700) at pthread_create.c:312
#6  0x00007eff06e2730d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 1 (Thread 0x7eff0b2a07c0 (LWP 13925)):
[KCrash Handler]
#6  0x00007eff06d62f79 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#7  0x00007eff06d66388 in __GI_abort () at abort.c:89
#8  0x00007eff0748f1a9 in qt_message_fatal (context=..., message=...) at global/qlogging.cpp:1364
#9  0x00007eff0748ccce in QMessageLogger::fatal (this=0x7fff822214a0, msg=0x7eff077e43f8 "ASSERT: \"%s\" in file %s, line %d") at global/qlogging.cpp:669
#10 0x00007eff07487440 in qt_assert (assertion=0x7efee94f3bfd "!isEmpty()", file=0x7efee94f3ba0 "/opt/project-neon5/include/QtCore/qlist.h", line=294) at global/qglobal.cpp:2124
#11 0x00007efee94ee79c in QList<QString>::first (this=0x7fff82221520) at /opt/project-neon5/include/QtCore/qlist.h:294
#12 0x00007efee94eb3e9 in nonemptyIssuer (cert=...) at /build/buildd/project-neon5-kdelibs4support-0.0+git20140512.0310+neon4~06c538a~14.04/src/kssl/kcm/cacertificatespage.cpp:51
#13 0x00007efee94eca17 in CaCertificatesPage::addCertificateItem (this=0x248d7f0, caCert=...) at /build/buildd/project-neon5-kdelibs4support-0.0+git20140512.0310+neon4~06c538a~14.04/src/kssl/kcm/cacertificatespage.cpp:371
#14 0x00007efee94eb9d9 in CaCertificatesPage::load (this=0x248d7f0) at /build/buildd/project-neon5-kdelibs4support-0.0+git20140512.0310+neon4~06c538a~14.04/src/kssl/kcm/cacertificatespage.cpp:148
#15 0x00007efee94ea8de in KcmSsl::load (this=0x2bb80a0) at /build/buildd/project-neon5-kdelibs4support-0.0+git20140512.0310+neon4~06c538a~14.04/src/kssl/kcm/kcmssl.cpp:59
#16 0x00007eff09955768 in KCModule::qt_static_metacall (_o=0x2bb80a0, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x248d500) at /build/buildd/project-neon5-kconfigwidgets-0.0+git20140512.0311+neon4~0e8537f~14.04/obj-x86_64-linux-gnu/src/moc_kcmodule.cpp:106
#17 0x00007eff0774aa11 in QMetaCallEvent::placeMetaCall (this=0x2566d90, object=0x2bb80a0) at kernel/qobject.cpp:487
#18 0x00007eff0774ba56 in QObject::event (this=0x2bb80a0, e=0x2566d90) at kernel/qobject.cpp:1241
#19 0x00007eff08b3928f in QWidget::event (this=0x2bb80a0, event=0x2566d90) at kernel/qwidget.cpp:8365
#20 0x00007eff08aef232 in QApplicationPrivate::notify_helper (this=0x214a800, receiver=0x2bb80a0, e=0x2566d90) at kernel/qapplication.cpp:3501
#21 0x00007eff08aef096 in QApplication::notify (this=0x7fff822222c0, receiver=0x2bb80a0, e=0x2566d90) at kernel/qapplication.cpp:3466
#22 0x00007eff07710544 in QCoreApplication::notifyInternal (this=0x7fff822222c0, receiver=0x2bb80a0, event=0x2566d90) at kernel/qcoreapplication.cpp:935
#23 0x00007eff077140d1 in QCoreApplication::sendEvent (receiver=0x2bb80a0, event=0x2566d90) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:237
#24 0x00007eff0771180f in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x2149f30) at kernel/qcoreapplication.cpp:1539
#25 0x00007eff077111b4 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1397
#26 0x00007eff07786396 in postEventSourceDispatch (s=0x2189960) at kernel/qeventdispatcher_glib.cpp:279
#27 0x00007eff03983e04 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007eff03984048 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007eff039840ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007eff07786b37 in QEventDispatcherGlib::processEvents (this=0x21a2880, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#31 0x00007efefc48b5b8 in QPAEventDispatcherGlib::processEvents (this=0x21a2880, flags=...) at eventdispatchers/qeventdispatcher_glib.cpp:123
#32 0x00007eff0770d27c in QEventLoop::processEvents (this=0x7fff82222170, flags=...) at kernel/qeventloop.cpp:136
#33 0x00007eff0770d53d in QEventLoop::exec (this=0x7fff82222170, flags=...) at kernel/qeventloop.cpp:212
#34 0x00007eff07710bfc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1188
#35 0x00007eff082853f0 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1436
#36 0x00007eff08aec09b in QApplication::exec () at kernel/qapplication.cpp:2746
#37 0x0000000000420c6d in main (argc=1, argv=0x7fff822223d8) at /build/buildd/project-neon5-systemsettings-0.0+git20140512.0307+neon4~0cab60e~14.04/app/main.cpp:53


Reproducible: Always

Steps to Reproduce:
1. Open Systemsettings
2. Try to open SSL KCM
Comment 1 Rohan Garg 2014-05-12 15:42:54 UTC
Git commit 431ef9d94246ee74ec2cf07e5d6dddebb3a85f85 by Rohan Garg.
Committed on 12/05/2014 at 14:19.
Pushed by garg into branch 'master'.

Guard against empty QStringLists and join entries in a list
REVIEW: 118098

M  +15   -8    src/kssl/kcm/cacertificatespage.cpp

http://commits.kde.org/kde4support/431ef9d94246ee74ec2cf07e5d6dddebb3a85f85