Guard against empty QStringLists and join entries in a list

BUG: 334650
REVIEW: 118098